Improve bow command